--- a/miniprogram/pages/adminLesson/adminLesson.wxml
+++ b/miniprogram/pages/adminLesson/adminLesson.wxml
@@ -5,7 +5,7 @@
     <view class="wrapper">
         <view class="header-action-wrapper">
             <view class="gap"></view>
-            <view class="lesson-action" bind:tap="onDeleteLesson">{{hidden?"开课":"停课"}}</view>
+            <view class="lesson-action">编辑</view>
         </view>
         <view class="title">{{lesson_name}}</view>
         <view class="header-subtitle">{{teacher_name}}</view>
@@ -23,5 +23,9 @@
                 删除
             </view>
         </view>
+    </view>
+    <view style="height:16rpx;margin:0 -32rpx;background-color:#f1f3f4"></view>
+    <view style="padding:32rpx 32rpx">
+        <view class="button-delete" bind:tap="onDeleteLesson">{{hidden?"开课":"停课"}}</view>
     </view>
 </view>
