更新预览课表

--- a/miniprogram/pages/adminSchedule/adminSchedule.wxml
+++ b/miniprogram/pages/adminSchedule/adminSchedule.wxml
@@ -1,4 +1,4 @@
 <view class="wrapper">
     <view class="btn" bind:tap="onShare"></view>
-    <image src="{{src}}" mode="aspectFit" />
+    <image src="{{src}}" mode="aspectFit" bind:tap="onPreview"/>
 </view>
