--- a/miniprogram/pages/adminUpdateLesson/adminUpdateLesson.wxml
+++ b/miniprogram/pages/adminUpdateLesson/adminUpdateLesson.wxml
@@ -9,6 +9,18 @@
   </view>
 </picker>
 
+
+<view class="h2">
+  课程类型
+</view>
+
+<picker bindchange="onClassTypesChange" value="{{classTypesIndex}}" range="{{class_types}}">
+ <view class="cell">
+ <view class="cell__title">{{class_types[classTypesIndex]}}</view>
+ <view class="van-icon-arrow"></view>
+ </view>
+</picker>
+
 <view class="h2">
   老师
 </view>
@@ -19,6 +31,7 @@
  <view class="van-icon-arrow"></view>
  </view>
 </picker>
+
 
 <view class="h2">
   上课时间
@@ -41,6 +54,7 @@
     <view class="van-icon-arrow"></view>
   </view>
 </picker>
+
 
     <view class="btn-wrapper">
        <view class="btn" bind:tap="onSubmit">
