--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,21 +1,29 @@
-<view class="wrapper" style="height:{{navigationHeight}}px;padding-top:{{navigationTop}}px;">
-    <view class="item-wrapper" style="height:{{navigationHeight}}px;padding-left:{{navigationPaddingLeft}}px">
-        <view class="navigation-title" style="font-size:{{navigationTitleFontSize}}px;line-height:{{navigationTitleFontSize}}px;">
-            {{app.globalData.title}}
+<view style="{{enabled?'':'display:none'}}">
+    <view class="wrapper" style="height:{{navigationHeight}}px;padding-top:{{navigationTop}}px;">
+        <view class="item-wrapper" style="height:{{navigationHeight}}px;padding-left:{{navigationPaddingLeft}}px">
+            <view class="navigation-title" style="font-size:{{navigationTitleFontSize}}px;line-height:{{navigationTitleFontSize}}px;">
+                {{app.globalData.title}}
+            </view>
+            <swiper style="font-size:{{navigationSubTitleFontSize}}px;height:{{navigationSubTitleFontSize*1.5}}px" class="swiper" vertical="true" circular="true" duration="300" autoplay="true" interval="3000">
+                <swiper-item>{{weather}}</swiper-item>
+                <swiper-item>{{date}}</swiper-item>
+                <swiper-item>{{bj}}</swiper-item>
+            </swiper>
         </view>
-        <swiper style="font-size:{{navigationSubTitleFontSize}}px;height:{{navigationSubTitleFontSize*1.5}}px" class="swiper" vertical="true" circular="true" duration="300" autoplay="true" interval="3000">
-            <swiper-item>{{weather}}</swiper-item>
-            <swiper-item>{{date}}</swiper-item>
-            <swiper-item>{{bj}}</swiper-item>
-        </swiper>
+    </view>
+    <poster items="{{poster}}" app="{{app}}"></poster>
+    <home-actions items="{{actions}}" app="{{app}}" bind:submit="onHomeActionsSubmit"></home-actions>
+    <gift slogan="{{market.slogan}}" app="{{app}}" bind:submit="navigate" data-href="/pages/market/market"></gift>
+    <teacher items="{{teachers}}" app="{{app}}" bind:submit="onTeacherSubmit"></teacher>
+    <home-booked items="{{booked}}" app="{{app}}" bind:submit="onHomeBookedSubmit"></home-booked>
+    <home-notice items="{{notices}}" app="{{app}}" bind:submit="onHomeNoticeSubmit"></home-notice>
+    <copyright items="{{copyright}}" app="{{app}}" bind:submit="onCopyrightSubmit"></copyright>
+    <!-- 预留底部栏的空间 -->
+    <view style="height: 96rpx"></view>
+</view>
+<view style="{{enabled?'display:none':''}}">
+    <view class="loading-wrapper">
+        <view class="spinner"></view>
+        <view>加载中...</view>
     </view>
 </view>
-<poster items="{{poster}}" app="{{app}}"></poster>
-<home-actions items="{{actions}}" app="{{app}}" bind:submit="onHomeActionsSubmit"></home-actions>
-<gift slogan="{{market.slogan}}" app="{{app}}" bind:submit="navigate" data-href="/pages/market/market"></gift>
-<teacher items="{{teachers}}" app="{{app}}" bind:submit="onTeacherSubmit"></teacher>
-<home-booked items="{{booked}}" app="{{app}}" bind:submit="onHomeBookedSubmit"></home-booked>
-<home-notice items="{{notices}}" app="{{app}}" bind:submit="onHomeNoticeSubmit"></home-notice>
-<copyright items="{{copyright}}" app="{{app}}" bind:submit="onCopyrightSubmit"></copyright>
-<!-- 预留底部栏的空间 -->
-<view style="height: 96rpx"></view>
