--- a/miniprogram/pages/teacher/teacher.wxml
+++ b/miniprogram/pages/teacher/teacher.wxml
@@ -16,7 +16,25 @@
   <view style="font-size:24rpx;color: rgba(0, 0, 0, 0.35);">正在加载...</view>
 </view>
 <view style="padding:20rpx;" wx:if="{{lessons}}">
-  <booking-item wx:for="{{lessons}}" wx:key="*this" item="{{item}}" app="{{app}}" bind:submit="onBookingItemSubmit"></booking-item>
+  <!-- <booking-item wx:for="{{lessons}}" wx:key="*this" item="{{item}}" app="{{app}}" bind:submit="onBookingItemSubmit"></booking-item> -->
+  <view class="item-wrapper {{(item.mode&1)?'disabled':''}}" wx:for="{{lessons}}" wx:key="course_id">
+    <view class="item">
+      <image class="item-image" src="{{app.globalData.staticHost}}/images/{{teacher.thumbnail}}"></image>
+    </view>
+    <view class="right">
+      <view class="text-time">
+        {{item.time}}
+      </view>
+      <view class="text-lesson">{{item.lesson_name}}</view>
+      <view class="sub-left">
+        <text>{{item.teacherName}}</text>
+        <text wx:if="{{!(item.mode&31)}}">已预约 {{item.count}}/{{item.peoples}}</text>
+      </view>
+      <view class="sub-right {{(item.mode==32)?'sub-right-btn':''}}" data-id="{{item.course_id}}" data-bookid="{{item.reservation_id}}" data-mode="{{item.mode}}" bindtap="onClick">
+        {{item.label}}
+      </view>
+    </view>
+  </view>
 </view>
 <view class="more" style="display:none">
   <view>更多介绍</view>
