--- a/miniprogram/pages/teacher/teacher.wxss
+++ b/miniprogram/pages/teacher/teacher.wxss
@@ -67,3 +67,77 @@ padding:12rpx 0;
   height: 48rpx;
 }
 
+.item-wrapper {
+  color: #202124;
+  display: flex;
+  background-color: #fff;
+  margin: 0 0 20rpx 0;
+  border-radius: 16rpx;
+  flex-grow: 1;
+  box-shadow: 0 0 0 2rpx #ebedef;
+  padding-left: 32rpx;
+  padding-right: 32rpx;
+}
+
+.item {
+  display: flex;
+  justify-content: center;
+  margin: 32rpx 32rpx 32rpx 0;
+}
+
+
+.item-image {
+  overflow: hidden;
+  position: relative;
+  border-radius: 16rpx;
+  background-color: #f8f9fa;
+  height: 184rpx;
+  width: 184rpx;
+}
+
+
+.right {
+  flex-grow: 1;
+  width: 0;
+  position: relative;
+  padding: 32rpx 0 80rpx;
+}
+
+
+.text-time {
+  font-size: 24rpx;
+  font-weight: 400;
+  line-height: 32rpx;
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom: 16rpx;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.text-lesson {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  -webkit-line-clamp: 3;
+  font-size: 38rpx;
+}
+
+
+.sub-left {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #70757a;
+  line-height: 32rpx;
+  position: absolute;
+  width: calc(100% - 64rpx);
+  padding: 0 32rpx;
+  font-size: 24rpx;
+  left: -32rpx;
+  bottom: 32rpx;
+
+}
