--- a/miniprogram/pages/teacher/teacher.wxml
+++ b/miniprogram/pages/teacher/teacher.wxml
@@ -8,7 +8,7 @@
   </view>
 </view>
 <teacher-buttons app="{{app}}" bind:submit="onTeacherButtonsSubmit"></teacher-buttons>
-<view wx:if="{{holiday}}" style="padding:120rpx 32rpx;font-size:28rpx;background:#fff;display:flex;align-items: center;justify-content: center">
+<view wx:if="{{!lessons}}" style="padding:120rpx 32rpx;font-size:28rpx;background:#fff;display:flex;align-items: center;justify-content: center">
   <view>暂未安排课程</view>
 </view>
 <view wx:elif="{{loading}}" style="display:none;align-items: center;justify-content: center;flex-direction:column;height:33.333vh">
