--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -77,3 +77,65 @@ page {
     -webkit-animation: spinner .8s linear infinite;
     animation: spinner .8s linear infinite
 }
+.copyright {
+    display: flex;
+    justify-content: center;
+    font-size: 22rpx;
+    color: rgba(0, 0, 0, 0.35);
+    margin: 60rpx 0 32rpx 0;
+  }
+.photo-swiper {
+    width: 750rpx;
+    height: 375rpx;
+}
+
+.photo-image {
+    width: 750rpx;
+    height: 375rpx;
+}
+ .title {
+    color: #4d5156;
+    display: flex;
+    position: relative;
+    padding: 32rpx 32rpx 24rpx;
+    background-color: #fff;
+    margin-top: 20rpx;
+    font-size: 38rpx;
+}
+
+.notice-item{
+    border-top: 2rpx solid #dadce0;
+    padding: 16rpx 0;
+    min-height: 86rpx;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    margin: 0 32rpx;
+}
+
+.notice-item-title {
+    font-size: 28rpx;
+    font-weight: 500;
+    line-height: 40rpx;
+    color: #202124;
+    text-overflow: ellipsis;
+    text-align: right;
+    overflow: hidden;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
+.notice-item-subtitle {
+    display: flex;
+    align-items: center;
+    font-size: 24rpx;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #5f6368;
+    line-height: normal;
+    margin-right: 16rpx;
+    white-space: nowrap;
+}
