--- a/miniprogram/pages/sudoku/sudoku.wxss
+++ b/miniprogram/pages/sudoku/sudoku.wxss
@@ -105,6 +105,7 @@
     height: 64rpx;
     font-size: 28rpx;
     border-radius: 48rpx;
+    overflow: hidden;
 }
 
 .difficulty>view {
@@ -116,4 +117,7 @@
 }
 .difficulty>view:last-child{
     border-right:0
+}
+.fixed{
+    color: rgba(75,75,75,.6)!important;
 }
