--- a/miniprogram/pages/sudoku/sudoku.wxml
+++ b/miniprogram/pages/sudoku/sudoku.wxml
@@ -1,5 +1,6 @@
 <wxs module="utils">
 function isGuess(puzzles,index){
+    console.log("---------->puzzles",puzzles[index]===".");
     if(puzzles[index]==='.'){
         return '';
     }
@@ -11,20 +12,22 @@ module.exports = {
 </wxs>
 <view class="difficulty-wrapper">
     <view class="difficulty">
-        <view  wx:for="{{difficulties}}" bind:tap="onDifficultyClick" wx:key="index" data-index="{{index}}" class="{{difficultySelected===index?'selected':''}}">
+        <view wx:for="{{difficulties}}" bind:tap="onDifficultyClick" wx:key="index" data-index="{{index}}" class="{{difficultySelected===index?'selected':''}}">
             {{item}}
         </view>
     </view>
 </view>
 <view wx:if="{{loaded}}">
     <view class="sudoku-wrapper">
-        <view  wx:for="{{numbers}}" data-index="{{index}}" data-value="{{item}}" data-puzzle="{{item!==0}}" class="{{index===selectedIndex ? 'selected' :''}} {{utils.isGuess(puzzles,index)}}" bind:tap="onItemClick" wx:key="index" style="{{((index<27||index>=54)&&index%9<3)||((index<27||index>=54)&&index%9>5)||((index>27&&index<54)&&(index%9>2&&index%9<6))?'background:#f2f2f2':''}}">
+        <view wx:for="{{numbers}}" data-index="{{index}}" data-value="{{item}}" data-puzzle="{{item!==0}}" class="{{index===selectedIndex ? 'selected' :''}} {{utils.isGuess(puzzle,index)}}" bind:tap="onItemClick" wx:key="index" style="{{((index<27||index>=54)&&index%9<3)||((index<27||index>=54)&&index%9>5)||((index>27&&index<54)&&(index%9>2&&index%9<6))?'background:#f2f2f2':''}}">
             {{item===0?'':item}}
         </view>
     </view>
     <view class="numbers-wrapper">
         <view class="numbers">
-            <view wx:for="{{n}}" data-value="{{item}}" bind:tap="onSelected">{{item}}</view>
+            <view wx:for="{{n}}" wx:key="index" data-value="{{item}}" bind:tap="onSelected">
+                {{item}}
+            </view>
         </view>
     </view>
 </view>
